[package]
name = "ib-hook"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Windows binary and system hooking library."
keywords = ["hooking", "detours", "windows", "shell"]
repository.workspace = true
license.workspace = true

[features]
sysinfo = ["dep:sysinfo"]

inject-dll = [
    "dep:dll-syringe",
    "dep:serde",
]

[dependencies]
bon = "3"
derive_more = { version = "2", features = ["display"] }
dll-syringe = { version = "0.17", optional = true, features = ["payload-utils", "rpc-core"] }
nt-time = { version = "0.15", default-features = false, features = ["std"] }
serde = { version = "1", optional = true, features = ["derive"] }
sysinfo = { version = ">=0.34,<0.39", optional = true, default-features = false, features = ["system"] }
thiserror = "2"
tracing = "0.1"
windows = { version = "0.62", features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
ib-hook = { path = ".", features = [
    "sysinfo",
    "inject-dll",
] }
test-log = { version = "0.2", default-features = false, features = ["trace", "unstable"] }

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
all-features = true
# To test this locally, run:
# ```
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
# $env:RUSTDOCFLAGS="--cfg docsrs"; cargo +nightly doc --all-features
# ```
rustdoc-args = ["--cfg", "docsrs"]
